[package]
name = "stronghold_ext"
version = "0.1.0"
edition = "2021"
authors = ["<Tensor>", "<tensordeveloper@gmail.com>"]

[features]
default = ["crypto"]
crypto = [
    "dep:p256",
    "dep:k256",
    "dep:ecdsa",
    "dep:rand",
    "dep:sha2",
    "dep:stronghold-utils",
    "dep:stronghold_engine",
    "dep:serde",
    "dep:zeroize",
]

[dependencies]
thiserror = "1.0"
iota_stronghold = { git = "https://github.com/iotaledger/stronghold.rs", branch = "2.0" }
stronghold-utils = { git = "https://github.com/iotaledger/stronghold.rs", branch = "2.0", optional = true }
stronghold_engine = { git = "https://github.com/iotaledger/stronghold.rs", branch = "2.0", optional = true }

p256 = { version = "0.13", optional = true, features = ["ecdsa"] }
k256 = { version = "0.13", optional = true, features = ["ecdsa"] }
ecdsa = { version = "0.16", optional = true }
rand = { version = "0.8", optional = true }
sha2 = { version = "0.10", optional = true }
zeroize = { version = "1.5.7", default-features = false, features = [
    "zeroize_derive",
], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev_dependencies]
hex = "0.4"
